--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a class="link" href="#resume">Resume</a></li>
             <li><a class="link" href="#contact">Contact</a></li>
         </ul>
+        <div></div>
     </nav>
 
 
